RESOLVED FIXED88941
REGRESSION(120121): inspector tests crash in DFG
https://bugs.webkit.org/show_bug.cgi?id=88941
Summary REGRESSION(120121): inspector tests crash in DFG
Filip Pizlo
Reported 2012-06-12 18:13:43 PDT
This appears to be caused by the DFG CFG simplification phase trying to fixup GetLocals that have already been fixed up, leading to bizarre behavior.
Attachments
Filip Pizlo
Comment 1 2012-06-12 18:22:49 PDT
Reviewed in person by Geoff.
Filip Pizlo
Comment 2 2012-06-12 18:29:31 PDT
Note You need to log in before you can comment on or make changes to this bug.